--- a/ansible_kubernetes/kubernetes_deploy.yaml
+++ b/ansible_kubernetes/kubernetes_deploy.yaml
@@ -31,6 +31,18 @@
       state: started
     ignore_errors: yes
 
+  - name: Add Google official GPG key
+    apt_key:
+      url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+      state: present
+
+  - name: Add Kubernetes Repository
+    apt_repository:
+      repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+      state: present
+      filename: kubernetes
+      mode: 0600
+
   - name: Install kubeadm, kubelet, and kubectl
     become: true
     apt:
@@ -52,84 +64,15 @@
       insertafter: EOF
       state: present
 
-  - name: Load containerd modules
+  - name: Add execute permission to the script
     become: yes
-    blockinfile:
-      path: /etc/modules-load.d/containerd.conf
-      block: |
-        overlay
-        br_netfilter
+    file:
+      path: prepare_cluster.sh
+      mode: u+x
 
-  - name: Load containerd modules with modprobe
+  - name: prepare cluster to init kubernetes
     become: yes
-    shell:
-      cmd: "{{ item }}"
-    with_items:
-      - sudo modprobe overlay
-      - sudo modprobe br_netfilter
-
-  - name: Configure Kubernetes networking
-    become: yes
-    blockinfile:
-      path: /etc/sysctl.d/kubernetes.conf
-      block: |
-        net.bridge.bridge-nf-call-ip6tables = 1
-        net.bridge.bridge-nf-call-iptables = 1
-        net.ipv4.ip_forward = 1
-
-  - name: Reload sysctl configuration
-    become: yes
-    shell: sysctl --system
-
-  - name: Configure kubelet cgroup driver
-    become: yes
-    blockinfile:
-      path: /etc/default/kubelet
-      block: |
-        KUBELET_EXTRA_ARGS="--cgroup-driver=cgroupfs"
-
-  - name: Reload kubelet configuration and restart kubelet
-    become: yes
-    systemd:
-      name: kubelet
-      daemon_reload: yes
-      state: restarted
-
-  - name: Configure Docker daemon
-    become: yes
-    blockinfile:
-      path: /etc/docker/daemon.json
-      block: |
-        {
-          "exec-opts": ["native.cgroupdriver=systemd"],
-          "log-driver": "json-file",
-          "log-opts": {
-            "max-size": "100m"
-          },
-          "storage-driver": "overlay2"
-        }
-
-  - name: Reload Docker configuration and restart Docker
-    become: yes
-    systemd:
-      name: docker
-      daemon_reload: yes
-      state: restarted
-
-  - name: Configure kubelet service with KUBELET_EXTRA_ARGS
-    become: yes
-    blockinfile:
-      path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
-      block: |
-        [Service]
-        Environment="KUBELET_EXTRA_ARGS=--fail-swap-on=false"
-
-  - name: Restart kubelet service
-    become: yes
-    systemd:
-      name: kubelet
-      state: restarted
-      daemon_reload: yes
+    command: "./prepare_cluster.sh"
 
   - name: Initialize Kubernetes cluster
     become_user: root
