add kubernetes deployment and service + a role in ansible

--- a/ansible_kubernetes/kubernetes_deploy.yaml
+++ b/ansible_kubernetes/kubernetes_deploy.yaml
@@ -108,3 +108,7 @@
   - name: change ownership to the kubernetes user
     become_user: root
     command: "chown -R kubernetes: /home/kubernetes/infinidat-challenge"
+
+  - name: Include flask-app role
+    include_role:
+      name: flask-app
