--- a/k8s/flask-svc.yaml
+++ b/k8s/flask-svc.yaml
@@ -1,18 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
     app: flask-app
   name: flask-svc
 spec:
   ports:
-  - port: 5000
+  - port: 80
     protocol: TCP
     targetPort: 5000
-    nodePort: 30000
   selector:
     app: flask-app
-  type: NodePort
+  type: LoadBalancer
 status:
   loadBalancer: {}
